# Rusty_ST

./: .gitignore
ESC/: ESC.kicad_pcb  ESC.kicad_prl  ESC.kicad_pro  ESC.kicad_sch  MCU.kicad_sch  _autosave-ESC.kicad_pcb  motor_drive.kicad_sch  motor_drive.kicad_sch-bak  ~_autosave-ESC.kicad_pcb.lck
MARV/: MARV_V0.kicad_pcb  MARV_V0.kicad_prl  MARV_V0.kicad_pro  MARV_V0.kicad_sch  MARV_V0.kicad_sch-bak  adc.kicad_sch  gain_offset.kicad_sch  mcu.kicad_sch  motor.kicad_sch  motor.kicad_sch-bak  power.kicad_sch  sensor.kicad_sch
rusty_st/: Cargo.toml  Embed.toml  memory.x
rusty_st/adc_macro/: Cargo.toml
rusty_st/adc_macro/src/: lib.rs
rusty_st/src/: adc.rs  lib.rs  main.rs  stm32g431_hal.rs
rusty_st/src/adc/: adc_config_types.rs  adc_handle.rs
