workspace = { members = ["adc_macro"] }
[package]
name = "rusty_st"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.3"
adc_macro = { path = "adc_macro" }

[dependencies.stm32g4]
version = "0.15.1"
features = ["stm32g431"]

[lib.adc_macro]
proc-macro = true
